# pyFishSenseDev_bak2

./: README.md  laser_field_calibration_orb.py  laser_field_calibration_sp.py  laser_field_calibration_tm.py  pyproject.toml  undistort_images.py
.devcontainer/: devcontainer.json
laser_calibration/: example_inference.ipynb  image_matcher.py  match_images.py  process_data.py  processing_config.yml  superpoint_inference.py  superpoint_inference_com.py  test_config.yml  test_data.py  utils.py
pyfishsensedev/fish/: fish_geometry.py  fish_head_tail_detector.py  fish_segmentation_fishial.py  fish_segmentation_fishial_onnx.py  fish_segmentation_fishial_pytorch.py  readme.md
scripts/: build_fishial_onnx_model.py
tests/data/: fish_segmentation.npz
tests/fish/: test_fish_head_tail_detector.py  test_fish_segmentation.py
